[package]
name = "multi-service"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="multi_service"
path="src/lib.rs"

[[bin]]
name="multi-service-test"
path="src/main.rs"

[dependencies]
actix-web = "3"
actix-files = "0.3"
actix-session = "0.4"
actix-utils = "2"
actix-service = "1.0.6"
env_logger = "0.7"
futures = "0.3.7"
